* Somewhat improve styling for quiz and text items * Fix edit-mode quiz introduction not showing up properly * Replace an unneeded string literal with an accessor

--- a/instructor_admin/static/admin/css/create_quiz.css
+++ b/instructor_admin/static/admin/css/create_quiz.css
@@ -109,7 +109,12 @@ body {
     height: 100%;
 }
 
-.quiz_attributes {
+.body > div:nth-child(2) {
+    padding: 15px;
+    background-color: white;
+}
+
+#quiz_attributes {
     grid-column: 2;
     display: grid;
 
@@ -122,20 +127,37 @@ body {
 
     margin-top: 15px;
 
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 100%;
 }
 
-.quiz_attribute {
+#quiz_intro_view {
+    display: grid;
+
+    grid-column: 1;
+
+    grid-template-columns: 100%;
+    grid-template-rows: 25px minmax(130px, auto);
+    grid-row-gap: 10px;
+
     border-bottom: solid 2px white;
-    padding-left: 5px;
-    padding-bottom: 5px;
+    margin-bottom: 15px;
+}
+
+#quiz_attributes > div > div:nth-child(1) {
+    font-family: "Sans-Serif";
+    font-size: 17px;
+    color: #000e2d;
+}
+
+#quiz_intro_view div:nth-child(2) {
+    background: white;
 }
 
 .quiz_introduction {
-    grid-column: 1 / 3;
+    padding: 15px;
 }
 
-.quiz {
+#quiz {
     display: grid;
     grid-row-gap: 5%;
     row-gap: 5%;
@@ -146,33 +168,51 @@ body {
 
     margin-bottom: 15px;
 
-    grid-template-columns: 20% auto 20%;
+    grid-template-columns: 15% auto 15%;
 }
 
-.quiz_tags {
+#quiz_tags_view {
     display: grid;
 
-    grid-column-gap: 5px;
+    grid-column: 1;
+
+    grid-template-columns: 100%;
+    grid-template-rows: 25px minmax(30px, auto) 30px;
+
     grid-row-gap: 5px;
 
-    grid-template-columns: repeat(2, 200px);
-    grid-auto-rows: auto;
-
-    margin-top: 5px;
+    padding-left: 5px;
+    padding-bottom: 5px;
 }
 
+
+#quiz_tags_view > div {
+    font-family: "Sans-Serif";
+    font-size: 18px;
+    color: #000e2d;
+}
+
+
 .quiz_tag {
+    display: inline-block;
+
+    padding: 2px;
+
     font: "Lucida Console";
     font-size: 18px;
     font-weight: 200;
+
+    background: white;
+
+    margin-right: 5px;
 
     border: solid 1px lightgrey;
     border-radius: 5px;
 }
 
 .quiz_tag > img {
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 2px;
+    margin-right: 2px;
 }
 
 .texts {
@@ -180,9 +220,17 @@ body {
     display: grid;
 }
 
-#quiz_title {
-    line-height: 25px;
-    width: 80%;
+#quiz_title_view {
+    display: grid;
+    grid-column: 1;
+
+    grid-template-columns: 100%;
+    grid-template-rows: 25px 30px;
+
+    grid-row-gap: 2px;
+    row-gap: 2px;
+
+    margin-bottom: 10px;
 }
 
 .text {
@@ -210,13 +258,30 @@ body {
 }
 
 .text_property_items {
-    font-size: 23px;
-    font-weight: 300;
-
     display: grid;
 
-    grid-row-gap: 10%;
-    row-gap: 10%;
+    font-size: 23px;
+    font-weight: 300;
+    grid-row-gap: 10px;
+    row-gap: 10px;
+}
+
+.text_property {
+    display: grid;
+
+    grid-template-columns: 100%;
+    grid-template-rows: 25px 30px;
+
+    grid-row-gap: 5px;
+
+    padding-left: 5px;
+    padding-bottom: 5px;
+}
+
+.text_property > div:nth-child(1) {
+    font-family: "Sans-Serif";
+    font-size: 17px;
+    color: #000e2d;
 }
 
 @media screen and (min-width:300px) and (max-width: 568px) {
